--- a/api/src/main/resources/META-INF/componentClass12.vm
+++ b/api/src/main/resources/META-INF/componentClass12.vm
@@ -400,7 +400,7 @@ $innersource
                         attachedState);
                 }
             }
-            else
+            else if (_$utils.getPrefixedPropertyName("isSet", $property.name)() || $field != null )
             {
                 //Full
                 ${property.name}Saved = saveAttachedState(facesContext,$field);
