MYFACES-2307 Generate HtmlHead and HtmlBody
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@801828 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/src/main/resources/META-INF/myfaces_core12.vm
+++ b/impl/src/main/resources/META-INF/myfaces_core12.vm
@@ -35,7 +35,7 @@ $baseContent
 #set ($componentList = ${model.getComponents()})
 #foreach( $component in $componentList )
 #if ($modelIds.contains($component.modelId) 
-    && ($component.name))
+    && ($component.name) && ($component.tagClass))
 #if ($utils.getTagPrefix($component.name) == $shortname) 
    <tag>
       <description><![CDATA[$component.longDescription]]></description>
@@ -105,7 +105,7 @@ $baseContent
 #set ($componentList = ${model.getConverters()})
 #foreach( $component in $componentList )
 #if ($modelIds.contains($component.modelId) 
-    && ($component.name))
+    && ($component.name)  && ($component.tagClass))
 #if ($utils.getTagPrefix($component.name) == $shortname) 
    <tag>
       <description><![CDATA[$component.longDescription]]></description>
@@ -161,7 +161,7 @@ $baseContent
 #set ($componentList = ${model.getValidators()})
 #foreach( $component in $componentList )
 #if ($modelIds.contains($component.modelId) 
-    && ($component.name))
+    && ($component.name) && ($component.tagClass))
 #if ($utils.getTagPrefix($component.name) == $shortname) 
    <tag>
       <description><![CDATA[$component.longDescription]]></description>
