--- a/impl/src/main/resources/META-INF/myfaces_html12.vm
+++ b/impl/src/main/resources/META-INF/myfaces_html12.vm
@@ -35,7 +35,7 @@ $baseContent
 #set ($componentList = ${model.getComponents()})
 #foreach( $component in $componentList )
 #if ($modelIds.contains($component.modelId) 
-    && ($component.name))
+    && ($component.name) && ($component.tagClass))
 #if ($utils.getTagPrefix($component.name) == $shortname) 
    <tag>
       <description><![CDATA[$component.longDescription]]></description>
@@ -101,7 +101,7 @@ $baseContent
 #set ($componentList = ${model.getConverters()})
 #foreach( $component in $componentList )
 #if ($modelIds.contains($component.modelId) 
-    && ($component.name))
+    && ($component.name)  && ($component.tagClass))
 #if ($utils.getTagPrefix($component.name) == $shortname) 
    <tag>
       <description><![CDATA[$component.longDescription]]></description>
@@ -149,7 +149,7 @@ $baseContent
 #set ($componentList = ${model.getValidators()})
 #foreach( $component in $componentList )
 #if ($modelIds.contains($component.modelId) 
-    && ($component.name))
+    && ($component.name) && ($component.tagClass))
 #if ($utils.getTagPrefix($component.name) == $shortname) 
    <tag>
       <description><![CDATA[$component.longDescription]]></description>
