MYFACES-2310 Implement Composite Component feature
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@806043 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testComposite/simpleAttribute.xhtml
+++ b/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testComposite/simpleAttribute.xhtml
@@ -22,10 +22,11 @@
 </head>
 <body>
 <composite:interface>
-    <composite:attribute name="style" type="java.lang.String" required="true" />
+    <composite:attribute name="style" default="background:red"/>
+    <composite:attribute name="styleClass" />
 </composite:interface>
 <composite:implementation>
-    <h:outputText value="Hello World"/>
+    <h:outputText value="Hello World" style="#{cc.attrs.style}" styleClass="#{cc.attrs.styleClass}"/>
 </composite:implementation>
 </body>
 </html>
