--- a/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testSimpleAttribute.xhtml
+++ b/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testSimpleAttribute.xhtml
@@ -21,9 +21,10 @@
 <head>
 </head>
 <body>
-<testComposite:simpleAttribute>
+<testComposite:simpleAttribute styleClass="class1">
 </testComposite:simpleAttribute>
-<testComposite:simpleAttribute>
+
+<testComposite:simpleAttribute style="background:green">
 </testComposite:simpleAttribute>
 </body>
 </html>
