--- a/api/src/main/resources/META-INF/componentClass12.vm
+++ b/api/src/main/resources/META-INF/componentClass12.vm
@@ -98,6 +98,7 @@ $innersource
 
 ## TODO: this condition should be checked for parent components
 ## and csv implements
+#if ($component.implements)
 #if ($component.implements == "javax.faces.component.behavior.ClientBehaviorHolder")
     static private final java.util.Collection<String> CLIENT_EVENTS_LIST = 
         java.util.Collections.unmodifiableCollection(
@@ -108,6 +109,7 @@ $innersource
 #if ($property.clientEvent != "")
             $commavar "$property.clientEvent"
 #set ($commavar = ",")            
+#end
 #end
 #end
 #end
