MYFACES-2310 Implement Composite Component feature (test code)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@806772 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testComposite/simpleAttribute.xhtml
+++ b/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testComposite/simpleAttribute.xhtml
@@ -26,7 +26,7 @@
     <composite:attribute name="styleClass" />
 </composite:interface>
 <composite:implementation>
-    <h:outputText value="Hello World" style="#{cc.attrs.style}" styleClass="#{cc.attrs.styleClass}"/>
+    <h:outputText id="text" value="Hello World" style="#{cc.attrs.style}" styleClass="#{cc.attrs.styleClass}"/>
 </composite:implementation>
 </body>
 </html>
