--- a/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testSimpleAttribute.xhtml
+++ b/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testSimpleAttribute.xhtml
@@ -21,10 +21,14 @@
 <head>
 </head>
 <body>
+<h:panelGroup id="testGroup1">
 <testComposite:simpleAttribute styleClass="class1">
 </testComposite:simpleAttribute>
+</h:panelGroup>
 
+<h:panelGroup id="testGroup2">
 <testComposite:simpleAttribute style="background:green">
 </testComposite:simpleAttribute>
+</h:panelGroup>
 </body>
 </html>
