--- a/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testSimpleComposite.xhtml
+++ b/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testSimpleComposite.xhtml
@@ -21,7 +21,9 @@
 <head>
 </head>
 <body>
+<h:panelGroup id="testGroup">
 <testComposite:simpleComposite>
 </testComposite:simpleComposite>
+</h:panelGroup>
 </body>
 </html>
