--- a/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testSimpleAttributeMethodExpression.xhtml
+++ b/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testSimpleAttributeMethodExpression.xhtml
@@ -17,14 +17,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:composite="http://java.sun.com/jsf/composite">
+	xmlns:testComposite="http://java.sun.com/jsf/composite/testComposite">
 <head>
 </head>
 <body>
-<composite:interface>
-</composite:interface>
-<composite:implementation>
-    <h:outputText id="text" value="Hello World!"/>
-</composite:implementation>
+<h:form id="testForm1">
+	<testComposite:simpleAttributeMethodExpression id="same" action="#{helloWorldBean.send}">
+	</testComposite:simpleAttributeMethodExpression>
+</h:form>
 </body>
 </html>
