--- a/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testComposite/compositeInsertChildren.xhtml
+++ b/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testComposite/compositeInsertChildren.xhtml
@@ -17,18 +17,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:composite="http://java.sun.com/jsf/composite"
 	xmlns:testComposite="http://java.sun.com/jsf/composite/testComposite">
 <head>
 </head>
 <body>
-<h:form id="testForm1">
-	<testComposite:simpleAttributeMethodExpression id="same"
-	    action="#{helloWorldBean.send}"
-	    actionListener="#{helloWorldBean.doSomething}"
-	    validator="#{helloWorldBean.validateName}"
-	    valueChangeListener="#{helloWorldBean.afterValueChange}"
-	    metodo="#{helloWorldBean.send}">
-	</testComposite:simpleAttributeMethodExpression>
-</h:form>
+<composite:interface>
+</composite:interface>
+<composite:implementation>
+    <testComposite:compositeInsertChildrenInner>
+        <h:outputText value="BETA " />
+        <composite:insertChildren />
+    </testComposite:compositeInsertChildrenInner>
+</composite:implementation>
 </body>
 </html>
