--- a/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testComposite/simpleActionSource.xhtml
+++ b/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testComposite/simpleActionSource.xhtml
@@ -17,18 +17,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:testComposite="http://java.sun.com/jsf/composite/testComposite">
+	xmlns:composite="http://java.sun.com/jsf/composite">
 <head>
 </head>
 <body>
-<h:form id="testForm1">
-	<testComposite:simpleAttributeMethodExpression id="same"
-	    action="#{helloWorldBean.send}"
-	    actionListener="#{helloWorldBean.doSomething}"
-	    validator="#{helloWorldBean.validateName}"
-	    valueChangeListener="#{helloWorldBean.afterValueChange}"
-	    metodo="#{helloWorldBean.send}">
-	</testComposite:simpleAttributeMethodExpression>
-</h:form>
+<composite:interface>
+    <composite:actionSource name="button"/>
+    <composite:actionSource name="button2" targets="button"/>
+</composite:interface>
+<composite:implementation>
+    <h:commandButton id="button" value="Press me!" />
+</composite:implementation>
 </body>
 </html>
