--- a/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testComposite/simpleAttributeMethodExpression.xhtml
+++ b/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testComposite/simpleAttributeMethodExpression.xhtml
@@ -23,9 +23,15 @@
 <body>
 <composite:interface>
     <composite:attribute name="action" targets="button" method-signature="String someAction()"/>
+    <composite:attribute name="actionListener" targets="link" method-signature="void someAction(javax.faces.event.ActionEvent)"/>
+    <composite:attribute name="validator" targets="input" method-signature="void validateSomething(javax.faces.context.FacesContext,javax.faces.component.UIComponent,Object)"/>
+    <composite:attribute name="valueChangeListener" targets="input" method-signature="void afterSomeChange(javax.faces.event.ValueChangeEvent)"/>
+    <composite:attribute name="metodo" targets="button" method-signature="String someAction()"/>    
 </composite:interface>
 <composite:implementation>
     <h:commandButton id="button" action="#{cc.attrs.action}" value="Press Me" />
+    <h:commandLink id="link" value="Press Me" />
+    <h:inputText id="input"/>
 </composite:implementation>
 </body>
 </html>
