--- a/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testCompositeInsertChildren.xhtml
+++ b/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testCompositeInsertChildren.xhtml
@@ -21,14 +21,10 @@
 <head>
 </head>
 <body>
-<h:form id="testForm1">
-	<testComposite:simpleAttributeMethodExpression id="same"
-	    action="#{helloWorldBean.send}"
-	    actionListener="#{helloWorldBean.doSomething}"
-	    validator="#{helloWorldBean.validateName}"
-	    valueChangeListener="#{helloWorldBean.afterValueChange}"
-	    metodo="#{helloWorldBean.send}">
-	</testComposite:simpleAttributeMethodExpression>
-</h:form>
+<h:panelGroup id="testGroup1">
+<testComposite:compositeInsertChildren>
+    <h:outputText value="GAMMA " />
+</testComposite:compositeInsertChildren>
+</h:panelGroup>
 </body>
 </html>
