MYFACES-2350 All renderers of components that implements ClientBehaviorHolder should encode javascript attributes
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@814255 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/src/main/resources/META-INF/faces-config20.vm
+++ b/impl/src/main/resources/META-INF/faces-config20.vm
@@ -112,6 +112,11 @@ $baseContent
 #if ($renderKit.className)
     <render-kit-class>$renderKit.className</render-kit-class>
 #end
+## TODO: Create a myfaces builder annotation and add through this class
+    <client-behavior-renderer>
+        <client-behavior-renderer-type>javax.faces.behavior.Ajax</client-behavior-renderer-type>
+        <client-behavior-renderer-class>org.apache.myfaces.renderkit.html.HtmlAjaxBehaviorRenderer</client-behavior-renderer-class>
+    </client-behavior-renderer>
 #set ($rendererList = ${renderKit.getRenderers()})
 #foreach( $renderer in $rendererList )
       <renderer>
