small fix javadoc and annotations
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@819754 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/src/main/resources/META-INF/myfaces_facelet_core20.vm
+++ b/impl/src/main/resources/META-INF/myfaces_facelet_core20.vm
@@ -237,12 +237,15 @@ $baseContent
          <name>$attribute.name</name>
          <required>$attribute.isRequired()</required>
 #set ($type = $utils.getClassFromFullClass($attribute.className))
-#if ($type == "ValueExpression")
-         <deferred-value></deferred-value>
-#else
-#if($attribute.isRtexprvalue())
+#if ($type == "MethodExpression")
+        <deferred-method>
+          <method-signature>${attribute.deferredMethodSignature}</method-signature>
+        </deferred-method>
+#elseif ($type == "ValueExpression")
          <deferred-value>
-             <type>$attribute.className</type>
+#if($attribute.deferredValueType)
+             <type>$attribute.deferredValueType</type>
+#end
          </deferred-value>
 #else
          <rtexprvalue>$attribute.isRtexprvalue()</rtexprvalue>
@@ -250,7 +253,6 @@ $baseContent
          <type>$attribute.className</type>
 #else
          <type>java.lang.String</type>
-#end
 #end
 #end
       </attribute>
@@ -282,12 +284,15 @@ $baseContent
          <name>$attribute.name</name>
          <required>$attribute.isRequired()</required>
 #set ($type = $utils.getClassFromFullClass($attribute.className))
-#if ($type == "ValueExpression")
-         <deferred-value></deferred-value>
-#else
-#if($attribute.isRtexprvalue())
+#if ($type == "MethodExpression")
+        <deferred-method>
+          <method-signature>${attribute.deferredMethodSignature}</method-signature>
+        </deferred-method>
+#elseif ($type == "ValueExpression")
          <deferred-value>
-             <type>$attribute.className</type>
+#if($attribute.deferredValueType)
+             <type>$attribute.deferredValueType</type>
+#end
          </deferred-value>
 #else
          <rtexprvalue>$attribute.isRtexprvalue()</rtexprvalue>
@@ -295,7 +300,6 @@ $baseContent
          <type>$attribute.className</type>
 #else
          <type>java.lang.String</type>
-#end
 #end
 #end
       </attribute>
