--- a/impl/src/main/resources/META-INF/myfaces_facelet_html20.vm
+++ b/impl/src/main/resources/META-INF/myfaces_facelet_html20.vm
@@ -225,12 +225,15 @@ $baseContent
          <name>$attribute.name</name>
          <required>$attribute.isRequired()</required>
 #set ($type = $utils.getClassFromFullClass($attribute.className))
-#if ($type == "ValueExpression")
-         <deferred-value></deferred-value>
-#else
-#if($attribute.isRtexprvalue())
+#if ($type == "MethodExpression")
+        <deferred-method>
+          <method-signature>${attribute.deferredMethodSignature}</method-signature>
+        </deferred-method>
+#elseif ($type == "ValueExpression")
          <deferred-value>
-             <type>$attribute.className</type>
+#if($attribute.deferredValueType)
+             <type>$attribute.deferredValueType</type>
+#end
          </deferred-value>
 #else
          <rtexprvalue>$attribute.isRtexprvalue()</rtexprvalue>
@@ -238,7 +241,6 @@ $baseContent
          <type>$attribute.className</type>
 #else
          <type>java.lang.String</type>
-#end
 #end
 #end
       </attribute>
@@ -270,12 +272,15 @@ $baseContent
          <name>$attribute.name</name>
          <required>$attribute.isRequired()</required>
 #set ($type = $utils.getClassFromFullClass($attribute.className))
-#if ($type == "ValueExpression")
-         <deferred-value></deferred-value>
-#else
-#if($attribute.isRtexprvalue())
+#if ($type == "MethodExpression")
+        <deferred-method>
+          <method-signature>${attribute.deferredMethodSignature}</method-signature>
+        </deferred-method>
+#elseif ($type == "ValueExpression")
          <deferred-value>
-             <type>$attribute.className</type>
+#if($attribute.deferredValueType)
+             <type>$attribute.deferredValueType</type>
+#end
          </deferred-value>
 #else
          <rtexprvalue>$attribute.isRtexprvalue()</rtexprvalue>
@@ -283,7 +288,6 @@ $baseContent
          <type>$attribute.className</type>
 #else
          <type>java.lang.String</type>
-#end
 #end
 #end
       </attribute>
