--- a/impl/src/main/resources/META-INF/myfaces_facelet_html20.vm
+++ b/impl/src/main/resources/META-INF/myfaces_facelet_html20.vm
@@ -81,8 +81,14 @@ $baseContent
 #else
 #if ( "$!property.isRtexprvalue()" == "")
 #set ($type = $utils.getClassFromFullClass($property.className))
-#if ($type == "String")
-         <deferred-value></deferred-value>
+#if($property.deferredValueType)
+         <deferred-value>
+             <type>$property.deferredValueType</type>
+         </deferred-value>
+#elseif ($type == "String")
+         <deferred-value>
+            <type>java.lang.String</type>
+         </deferred-value>
 #else
          <deferred-value>
              <type>$property.className</type>
@@ -135,8 +141,16 @@ $baseContent
          <rtexprvalue>false</rtexprvalue>
 #else
 #set ($type = $utils.getClassFromFullClass($property.className))
-#if ($type == "String")
-         <deferred-value></deferred-value>
+#if($property.deferredValueType)
+         <deferred-value>
+             <type>$property.deferredValueType</type>
+         </deferred-value>             
+#elseif ($type == "String")
+         <deferred-value>
+            <type>java.lang.String</type>
+         </deferred-value>
+
+
 #else
          <deferred-value>
              <type>$property.className</type>
@@ -186,8 +200,14 @@ $baseContent
          <rtexprvalue>false</rtexprvalue>
 #else
 #set ($type = $utils.getClassFromFullClass($property.className))
-#if ($type == "String")
-         <deferred-value></deferred-value>
+#if($property.deferredValueType)
+         <deferred-value>
+             <type>$property.deferredValueType</type>
+         </deferred-value>             
+#elseif ($type == "String")
+         <deferred-value>
+             <type>java.lang.String</type>
+         </deferred-value>
 #else
          <deferred-value>
              <type>$property.className</type>
