MYFACES-2553 Handle MethodExpressions on <composite:attribute> correctly (fix ViewDeclarationLanguage.retargetMethodExpressions method)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@909661 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testComposite/simpleAttributeMethodExpression.xhtml
+++ b/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testComposite/simpleAttributeMethodExpression.xhtml
@@ -26,7 +26,8 @@
     <composite:attribute name="actionListener" targets="link" method-signature="void someAction(javax.faces.event.ActionEvent)"/>
     <composite:attribute name="validator" targets="input" method-signature="void validateSomething(javax.faces.context.FacesContext,javax.faces.component.UIComponent,Object)"/>
     <composite:attribute name="valueChangeListener" targets="input" method-signature="void afterSomeChange(javax.faces.event.ValueChangeEvent)"/>
-    <composite:attribute name="metodo" targets="button" method-signature="String someAction()"/>    
+    <!-- Here targets should be ignored, because it is only valid for the previous four attributes -->
+    <composite:attribute name="metodo" targets="button" method-signature="String someAction()"/>
 </composite:interface>
 <composite:implementation>
     <h:commandButton id="button" action="#{cc.attrs.action}" value="Press Me" />
