fix package javadoc
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@932159 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/src/main/java/org/apache/myfaces/view/facelets/compiler/package.html
+++ b/impl/src/main/java/org/apache/myfaces/view/facelets/compiler/package.html
@@ -19,11 +19,11 @@
 </head>
 <body bgcolor="white">
 Facelet compiler package, <b>not for extension</b>.  
-{@link com.sun.facelets.compiler.Compiler Compilers} are used in conjunction with a
-{@link com.sun.facelets.FaceletFactory FaceletFactory} implementation.
+{@link org.apache.myfaces.view.facelets.compiler.Compiler Compilers} are used in conjunction with a
+{@link org.apache.myfaces.view.facelets.FaceletFactory FaceletFactory} implementation.
 <p/>
-You may register multiple {@link com.sun.facelets.tag.TagLibrary TagLibraries} and
-{@link com.sun.facelets.tag.TagDecorator TagDecorators} in order to define how the
+You may register multiple {@link org.apache.myfaces.view.facelets.tag.TagLibrary TagLibraries} and
+{@link org.apache.myfaces.view.facelets.tag.TagDecorator TagDecorators} in order to define how the
 document will be parsed with the Compiler instance.  TagLibraries packaged with Facelets
 will be loaded for you automatically and bound to their appropriate namespaces.
 <pre><code>
