MYFACES-2671 MYFACES-2633 regresses the ezcomp spinner example (add test solved on MYFACES-2633)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@937527 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testComposite/simpleAttributeVE.xhtml
+++ b/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testComposite/simpleAttributeVE.xhtml
@@ -27,7 +27,7 @@
     <composite:attribute name="customMethod" method-signature="String doSomething(String)"/>
 </composite:interface>
 <composite:implementation>
-    <h:outputText id="text" value="Hello World" style="#{cc.attrs.style}" styleClass="#{cc.attrs.styleClass}"/>
+    <h:outputText id="text" value="#{cc.javaProperty}" style="#{cc.attrs.style}" styleClass="#{cc.attrs.styleClass}"/>
     <h:commandButton id="button" action="#{cc.attrs.customMethod}"/>
 </composite:implementation>
 </body>
