--- a/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testSimpleAttributeVE.xhtml
+++ b/impl/src/test/resources/org/apache/myfaces/view/facelets/tag/composite/testSimpleAttributeVE.xhtml
@@ -22,7 +22,7 @@
 </head>
 <body>
 <h:panelGroup id="testGroup1">
-<testComposite:simpleAttributeVE style="#{bean.style}" styleClass="#{bean.styleClass}" customMethod="#{bean.doSomethingFunny}">
+<testComposite:simpleAttributeVE style="#{bean.style}" styleClass="#{bean.styleClass}" javaProperty="#{bean.javaProperty}" customMethod="#{bean.doSomethingFunny}">
 </testComposite:simpleAttributeVE>
 </h:panelGroup>
 </body>
