fix difference between stateHolder and partialStateHolder
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@939876 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/src/main/resources/META-INF/componentClass20.vm
+++ b/api/src/main/resources/META-INF/componentClass20.vm
@@ -142,7 +142,7 @@ $innersource
 #set ($defaultValue = false)
 #end
     // Property: $property.name
-#if ($property.isStateHolder())
+#if ($property.isPartialStateHolder())
 #if ($property.isLiteralOnly() || $property.isTagExcluded() )
     private $type $field #if($defaultValue) = $defaultValue;#{else};#{end}
 
@@ -296,7 +296,7 @@ $innersource
 #if ($property.name == "for")
         $comma $field("for")
 #else
-#if ($property.isStateHolder())
+#if ($property.isPartialStateHolder())
         $comma ${field}Set
 #else
         $comma $field
@@ -327,7 +327,7 @@ $innersource
 
 #set ($primitiveCount = 1) ## $propertyList.size() + 1 
 #foreach( $property in $propertyList )
-#if ($property.isStateHolder())
+#if ($property.isPartialStateHolder())
 #set ($primitiveCount = $primitiveCount + 1)
 #if($utils.isPrimitiveClass($property.className))
 #set ($primitiveCount = $primitiveCount + 1)
@@ -343,7 +343,7 @@ $innersource
         super.markInitialState();
 #foreach( $property in $propertyList )
 #set ($field = $property.fieldName)
-#if ($property.isStateHolder())        
+#if ($property.isPartialStateHolder())        
         if ($field != null && 
             $field instanceof PartialStateHolder)
         {
@@ -360,7 +360,7 @@ $innersource
             super.clearInitialState();
 #foreach( $property in $propertyList )
 #set ($field = $property.fieldName)
-#if ($property.isStateHolder())
+#if ($property.isPartialStateHolder())
 ##          //Only has sense propagate this method if is initialStateMarked
             if ($field != null && 
                 $field instanceof PartialStateHolder)
@@ -383,7 +383,7 @@ $innersource
 #foreach( $property in $propertyList )
 #set ($field = $property.fieldName)
 #set ($type = $property.className)
-#if ($property.isStateHolder())
+#if ($property.isPartialStateHolder())
 #set ($arrayIndex = $arrayIndex + 1)
             Object ${property.name}Saved = null;
             if (!_$utils.getPrefixedPropertyName("isSet", $property.name)() &&
@@ -424,7 +424,7 @@ $innersource
 #foreach( $property in $propertyList )
 #set ($field = $property.fieldName)
 #set ($type = $property.className)
-#if ($property.isStateHolder())
+#if ($property.isPartialStateHolder())
 #set ($arrayIndex = $arrayIndex + 1)
             values[$arrayIndex] = ${property.name}Saved;
 ## StateHelper Properties does not need save and restore
@@ -441,7 +441,7 @@ $innersource
 #foreach( $property in $propertyList )
 #set ($field = $property.fieldName)
 #set ($type = $property.className)
-#if ($property.isStateHolder())
+#if ($property.isPartialStateHolder())
 #set ($arrayIndex = $arrayIndex + 1)
             values[$arrayIndex] = saveAttachedState(facesContext,$field);
 ## StateHelper Properties does not need save and restore
@@ -465,7 +465,7 @@ $innersource
 #foreach( $property in $propertyList )
 #set ($field = $property.fieldName)
 #set ($type = $property.className)
-#if ($property.isStateHolder())
+#if ($property.isPartialStateHolder())
 #set ($arrayIndex = $arrayIndex + 1)
         if (values[$arrayIndex] instanceof _AttachedDeltaWrapper)
         {
